--- a/package.json
+++ b/package.json
@@ -4,10 +4,29 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "express": "~4.18.1",
+    "tslib": "^2.3.0"
+  },
   "devDependencies": {
+    "@nx/esbuild": "18.2.3",
+    "@nx/eslint": "18.2.3",
+    "@nx/eslint-plugin": "18.2.3",
     "@nx/js": "18.2.3",
+    "@nx/node": "18.2.3",
     "@nx/workspace": "18.2.3",
-    "nx": "18.2.3"
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@types/express": "~4.17.13",
+    "@types/node": "~18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "esbuild": "^0.19.2",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "nx": "18.2.3",
+    "prettier": "^2.6.2",
+    "typescript": "~5.4.2"
   }
 }
