--- a/package.json
+++ b/package.json
@@ -1,32 +1,82 @@
 {
   "name": "@csd-table-api/source",
   "version": "0.0.0",
+  "private": true,
   "license": "MIT",
   "scripts": {},
-  "private": true,
   "dependencies": {
-    "express": "~4.18.1",
-    "tslib": "^2.3.0"
+    "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
+    "connect-pg-simple": "^9.0.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.7",
+    "envalid": "^8.0.0",
+    "express": "5.0.0-beta.3",
+    "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash-es": "^4.17.21",
+    "luxon": "^3.4.4",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.5",
+    "tslib": "^2.6.2",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@nx/esbuild": "18.2.3",
     "@nx/eslint": "18.2.3",
     "@nx/eslint-plugin": "18.2.3",
+    "@nx/express": "^18.2.3",
+    "@nx/jest": "18.2.3",
     "@nx/js": "18.2.3",
     "@nx/node": "18.2.3",
+    "@nx/react": "18.2.3",
+    "@nx/vite": "18.2.3",
+    "@nx/web": "18.2.3",
     "@nx/workspace": "18.2.3",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
-    "@types/express": "~4.17.13",
-    "@types/node": "~18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.3.0",
-    "@typescript-eslint/parser": "^7.3.0",
-    "esbuild": "^0.19.2",
-    "eslint": "~8.57.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@swc-node/register": "~1.9.0",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "~1.4.12",
+    "@swc/helpers": "~0.5.8",
+    "@swc/jest": "0.2.36",
+    "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "~4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/hpp": "^0.2.6",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash-es": "^4.17.12",
+    "@types/luxon": "^3.4.2",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "~20.12.5",
+    "@types/pg": "^8.11.4",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "drizzle-kit": "^0.20.14",
+    "esbuild": "^0.20.2",
+    "esbuild-register": "^3.5.0",
+    "eslint": "~9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "nx": "18.2.3",
-    "prettier": "^2.6.2",
-    "typescript": "~5.4.2"
+    "prettier": "^3.2.5",
+    "typescript": "~5.4.4"
   }
 }
