--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {},
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "connect-pg-simple": "^9.0.1",
     "cookie-parser": "^1.4.6",
@@ -23,6 +25,7 @@
     "luxon": "^3.4.4",
     "morgan": "^1.10.0",
     "pg": "^8.11.5",
+    "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.2",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0",
